cmake_minimum_required(VERSION 3.3)
project(nut)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    app/basemon/basemon.c
    app/basemon/basemon.h
    app/basemon/dataflash.c
    app/basemon/dataflash.h
    app/basemon/realtek.c
    app/basemon/realtek.h
    app/basemon/rtlregs.h
    app/basemon/smsc.c
    app/basemon/smsc.h
    app/basemon/smscregs.h
    app/basemon/uart.c
    app/basemon/uart.h
    app/basemon/utils.c
    app/basemon/utils.h
    app/basemon/webdemo.c
    app/basemon/webdemo.h
    app/basemon/xmemtest.c
    app/basemon/xmemtest.h
    app/canbus/candemo.c
    app/cppdemo/cppdemo.cc
    app/events/events.c
    app/ftpd/ftpserv.c
    app/httpd/httpserv.c
    app/inetq/inetq.c
    app/isp2/isp2.c
    app/logtime/logtime.c
    app/nutpiper/config.c
    app/nutpiper/config.h
    app/nutpiper/display.c
    app/nutpiper/display.h
    app/nutpiper/nutpiper.c
    app/nutpiper/player.c
    app/nutpiper/player.h
    app/nutpiper/scanner.c
    app/nutpiper/scanner.h
    app/playmp3/playmp3.c
    app/portdio/portdio.c
    app/pppc/pppc.c
    app/rs232d/rs232d.c
    app/simple/simple.c
    app/tcps/tcps.c
    app/threads/threads.c
    app/timers/timers.c
    app/uart/uart.c
    arch/arm/dev/at91_efc.c
    arch/arm/dev/at91_emac.c
    arch/arm/dev/at91_mci.c
    arch/arm/dev/at91_spi.c
    arch/arm/dev/at91init.c
    arch/arm/dev/at91sam7x_emac.c
    arch/arm/dev/ax88796.c
    arch/arm/dev/cs8900a.c
    arch/arm/dev/debug_at91.c
    arch/arm/dev/debug_gba.c
    arch/arm/dev/debug_lpc2xxx.c
    arch/arm/dev/dm9000e.c
    arch/arm/dev/hd44780_at91.c
    arch/arm/dev/ih_at91emac.c
    arch/arm/dev/ih_at91fiq.c
    arch/arm/dev/ih_at91irq0.c
    arch/arm/dev/ih_at91irq1.c
    arch/arm/dev/ih_at91irq2.c
    arch/arm/dev/ih_at91pio.c
    arch/arm/dev/ih_at91spi0.c
    arch/arm/dev/ih_at91spi1.c
    arch/arm/dev/ih_at91ssc.c
    arch/arm/dev/ih_at91swirq.c
    arch/arm/dev/ih_at91sys.c
    arch/arm/dev/ih_at91tc0.c
    arch/arm/dev/ih_at91tc1.c
    arch/arm/dev/ih_at91tc2.c
    arch/arm/dev/ih_at91uart0.c
    arch/arm/dev/ih_at91uart1.c
    arch/arm/dev/ih_at91wdi.c
    arch/arm/dev/ihndlr_gba.c
    arch/arm/dev/ihndlr_lpc2xxx.c
    arch/arm/dev/ostimer_at91.c
    arch/arm/dev/ostimer_gba.c
    arch/arm/dev/ostimer_lpc2xxx.c
    arch/arm/dev/ostimer_s3c4510b.c
    arch/arm/dev/reg_ax88796.h
    arch/arm/dev/spimmc_at91.c
    arch/arm/dev/st7036_at91.c
    arch/arm/dev/uartgba.c
    arch/arm/dev/usart0at91.c
    arch/arm/dev/usart1at91.c
    arch/arm/dev/usartat91.c
    arch/arm/dev/wdt_at91.c
    arch/arm/os/context.c
    arch/arm/os/nutinit.c
    arch/avr/dev/ace.c
    arch/avr/dev/adc.c
    arch/avr/dev/ahdlc0.c
    arch/avr/dev/ahdlc1.c
    arch/avr/dev/ahdlcavr.c
    arch/avr/dev/atcan.c
    arch/avr/dev/cs8900.c
    arch/avr/dev/cs8900.h
    arch/avr/dev/debug0.c
    arch/avr/dev/debug1.c
    arch/avr/dev/eeprom.c
    arch/avr/dev/eth0cs.c
    arch/avr/dev/eth0rtl.c
    arch/avr/dev/hd44780.c
    arch/avr/dev/hd44780_bus.c
    arch/avr/dev/ide.c
    arch/avr/dev/ih_adc.c
    arch/avr/dev/ih_analog_comp.c
    arch/avr/dev/ih_canit.c
    arch/avr/dev/ih_ee_ready.c
    arch/avr/dev/ih_int0.c
    arch/avr/dev/ih_int1.c
    arch/avr/dev/ih_int2.c
    arch/avr/dev/ih_int3.c
    arch/avr/dev/ih_int4.c
    arch/avr/dev/ih_int5.c
    arch/avr/dev/ih_int6.c
    arch/avr/dev/ih_int7.c
    arch/avr/dev/ih_ovrit.c
    arch/avr/dev/ih_spi_stc.c
    arch/avr/dev/ih_spm_ready.c
    arch/avr/dev/ih_timer0_comp.c
    arch/avr/dev/ih_timer0_ovf.c
    arch/avr/dev/ih_timer1_capt.c
    arch/avr/dev/ih_timer1_compa.c
    arch/avr/dev/ih_timer1_compb.c
    arch/avr/dev/ih_timer1_compc.c
    arch/avr/dev/ih_timer1_ovf.c
    arch/avr/dev/ih_timer2_comp.c
    arch/avr/dev/ih_timer2_ovf.c
    arch/avr/dev/ih_timer3_capt.c
    arch/avr/dev/ih_timer3_compa.c
    arch/avr/dev/ih_timer3_compb.c
    arch/avr/dev/ih_timer3_compc.c
    arch/avr/dev/ih_timer3_ovf.c
    arch/avr/dev/ih_twi.c
    arch/avr/dev/ih_usart0_rx.c
    arch/avr/dev/ih_usart0_tx.c
    arch/avr/dev/ih_usart0_udre.c
    arch/avr/dev/ih_usart1_rx.c
    arch/avr/dev/ih_usart1_tx.c
    arch/avr/dev/ih_usart1_udre.c
    arch/avr/dev/ir.c
    arch/avr/dev/irqstack.c
    arch/avr/dev/irsony.c
    arch/avr/dev/lanc111.c
    arch/avr/dev/nicrtl.c
    arch/avr/dev/ostimer.c
    arch/avr/dev/pcmcia.c
    arch/avr/dev/rtlregs.h
    arch/avr/dev/sja1000.c
    arch/avr/dev/spidigio.c
    arch/avr/dev/spiflash.c
    arch/avr/dev/sppif0.c
    arch/avr/dev/tlc16c550.c
    arch/avr/dev/twif.c
    arch/avr/dev/uart0.c
    arch/avr/dev/uart1.c
    arch/avr/dev/uartavr.c
    arch/avr/dev/usart0avr.c
    arch/avr/dev/usart1avr.c
    arch/avr/dev/usartavr.c
    arch/avr/dev/vs1001k.c
    arch/avr/dev/wdt_avr.c
    arch/avr/dev/wlan.c
    arch/avr/dev/wlandrv.c
    arch/avr/include/atom.h
    arch/avr/os/context_gcc.c
    arch/avr/os/context_icc.c
    arch/avr/os/nutinit.c
    arch/h8300h/dev/ihndlr.c
    arch/h8300h/dev/mweeprom.c
    arch/h8300h/dev/nicrtl.c
    arch/h8300h/dev/ostimer.c
    arch/h8300h/dev/s3c4510b_console.c
    arch/h8300h/dev/s3c4510b_irqreg.c
    arch/h8300h/dev/scih8.c
    arch/h8300h/dev/scih8dbg.c
    arch/h8300h/dev/scih8devs.c
    arch/h8300h/dev/uart_s3c4510b_dbg.c
    arch/h8300h/include/atom.h
    arch/h8300h/include/h83068f.h
    arch/h8300h/init/nuthwinit.c
    arch/h8300h/os/nutinit.c
    arch/h8300h/os/thread.c
    arch/m68k/dev/ihndlr.c
    arch/m68k/dev/ostimer.c
    arch/m68k/include/atom.h
    arch/m68k/os/nutinit.c
    arch/m68k/os/thread.c
    arch/unix/dev/eeprom.c
    arch/unix/dev/ostimer.c
    arch/unix/dev/unix_devs.c
    arch/unix/include/atom.h
    arch/unix/os/nutinit.c
    arch/unix/os/options.c
    arch/unix/os/thread.c
    boot/appload/appload.c
    boot/appload/appload.h
    boot/appload/arp.c
    boot/appload/arp.h
    boot/appload/config.c
    boot/appload/config.h
    boot/appload/confnet.h
    boot/appload/debug.c
    boot/appload/debug.h
    boot/appload/dhcp.c
    boot/appload/dhcp.h
    boot/appload/ether.c
    boot/appload/ether.h
    boot/appload/ip.c
    boot/appload/ip.h
    boot/appload/smscregs.h
    boot/appload/tftp.c
    boot/appload/tftp.h
    boot/appload/types.h
    boot/appload/udp.c
    boot/appload/udp.h
    boot/appload/utils.c
    boot/appload/utils.h
    boot/bootmon/arp.c
    boot/bootmon/arp.h
    boot/bootmon/bootmon.c
    boot/bootmon/bootmon.h
    boot/bootmon/config.c
    boot/bootmon/config.h
    boot/bootmon/dhcp.c
    boot/bootmon/dhcp.h
    boot/bootmon/dialog.c
    boot/bootmon/dialog.h
    boot/bootmon/ether.c
    boot/bootmon/ether.h
    boot/bootmon/ip.c
    boot/bootmon/ip.h
    boot/bootmon/nvmem.c
    boot/bootmon/nvmem.h
    boot/bootmon/tftp.c
    boot/bootmon/tftp.h
    boot/bootmon/twbbi.c
    boot/bootmon/twbbi.h
    boot/bootmon/uart.c
    boot/bootmon/uart.h
    boot/bootmon/udp.c
    boot/bootmon/udp.h
    boot/bootmon/utils.c
    boot/bootmon/utils.h
    boot/eboot/arp.c
    boot/eboot/arp.h
    boot/eboot/dhcp.c
    boot/eboot/dhcp.h
    boot/eboot/eboot.c
    boot/eboot/eboot.h
    boot/eboot/ether.c
    boot/eboot/ether.h
    boot/eboot/flash.h
    boot/eboot/ip.c
    boot/eboot/ip.h
    boot/eboot/rtlregs.h
    boot/eboot/tftp.c
    boot/eboot/tftp.h
    boot/eboot/types.h
    boot/eboot/udp.c
    boot/eboot/udp.h
    boot/eboot/util.c
    boot/eboot/util.h
    c/stdlib/abs.c
    c/stdlib/atoi.c
    c/stdlib/atol.c
    c/stdlib/calloc.c
    c/stdlib/labs.c
    c/stdlib/strtol.c
    c/stdlib/strtoul.c
    c/string/memchr.c
    c/string/memcmp.c
    c/string/memcpy.c
    c/string/memset.c
    c/string/strcat.c
    c/string/strchr.c
    c/string/strcmp.c
    c/string/strcpy.c
    c/string/strdup.c
    c/string/stricmp.c
    c/string/strlen.c
    c/string/strncat.c
    c/string/strncmp.c
    c/string/strncpy.c
    c/string/strrchr.c
    c/string/strstr.c
    c/string/strtok.c
    cpp/nutcpp.cc
    crt/close.c
    crt/clrerr.c
    crt/ctime.h
    crt/errno.c
    crt/fclose.c
    crt/fcloseall.c
    crt/fdopen.c
    crt/feof.c
    crt/ferror.c
    crt/fflush.c
    crt/fgetc.c
    crt/fgets.c
    crt/filelength.c
    crt/fileno.c
    crt/flushall.c
    crt/fmode.c
    crt/fopen.c
    crt/fprintf.c
    crt/fprintf_p.c
    crt/fpurge.c
    crt/fputc.c
    crt/fputs.c
    crt/fputs_p.c
    crt/fread.c
    crt/freopen.c
    crt/fscanf.c
    crt/fscanf_p.c
    crt/fseek.c
    crt/ftell.c
    crt/fwrite.c
    crt/fwrite_p.c
    crt/getc.c
    crt/getchar.c
    crt/getf.c
    crt/getff.c
    crt/gets.c
    crt/gmtime.c
    crt/ioctl.c
    crt/kbhit.c
    crt/localtim.c
    crt/malloc.c
    crt/mktime.c
    crt/nut_io.h
    crt/open.c
    crt/printf.c
    crt/printf_p.c
    crt/putc.c
    crt/putchar.c
    crt/putf.c
    crt/putff.c
    crt/puts.c
    crt/puts_p.c
    crt/read.c
    crt/scanf.c
    crt/scanf_p.c
    crt/seek.c
    crt/sprintf.c
    crt/sprintf_p.c
    crt/sscanf.c
    crt/sscanf_p.c
    crt/strtok_r.c
    crt/tell.c
    crt/time.c
    crt/tzset.c
    crt/ungetc.c
    crt/vfprintf.c
    crt/vfprintf_p.c
    crt/vfscanf.c
    crt/vfscanf_p.c
    crt/vsprintf.c
    crt/vsprintf_p.c
    crt/vsscanf.c
    crt/vsscanf_p.c
    crt/write.c
    crt/write_p.c
    dev/at45db.c
    dev/at49bv.c
    dev/avrtarget.c
    dev/can_dev.c
    dev/chat.c
    dev/cy2239x.c
    dev/ds1307rtc.c
    dev/genchar.c
    dev/ihndlr.c
    dev/mmcard.c
    dev/netbuf.c
    dev/npl.c
    dev/nplmmc.c
    dev/npluled.c
    dev/null.c
    dev/nvmem.c
    dev/pcf8563.c
    dev/ppp.c
    dev/rtc.c
    dev/sbbif0.c
    dev/sbimmc.c
    dev/term.c
    dev/twbbif.c
    dev/usart.c
    dev/vs10xx.c
    dev/watchdog.c
    dev/x12rtc.c
    fs/basename.c
    fs/dirent.c
    fs/dirname.c
    fs/fat.c
    fs/pathops.c
    fs/phat12.c
    fs/phat16.c
    fs/phat32.c
    fs/phatdbg.c
    fs/phatdir.c
    fs/phatfs.c
    fs/phatio.c
    fs/phatutil.c
    fs/phatvol.c
    fs/pnutfs.c
    fs/uromfs.c
    include/arch/arm/at91.h
    include/arch/arm/at91_aic.h
    include/arch/arm/at91_ccfg.h
    include/arch/arm/at91_dbgu.h
    include/arch/arm/at91_ebi.h
    include/arch/arm/at91_efc.h
    include/arch/arm/at91_emac.h
    include/arch/arm/at91_matrix.h
    include/arch/arm/at91_mc.h
    include/arch/arm/at91_mci.h
    include/arch/arm/at91_pio.h
    include/arch/arm/at91_pit.h
    include/arch/arm/at91_pmc.h
    include/arch/arm/at91_ps.h
    include/arch/arm/at91_rstc.h
    include/arch/arm/at91_sdramc.h
    include/arch/arm/at91_sf.h
    include/arch/arm/at91_smc.h
    include/arch/arm/at91_spi.h
    include/arch/arm/at91_ssc.h
    include/arch/arm/at91_tc.h
    include/arch/arm/at91_twi.h
    include/arch/arm/at91_us.h
    include/arch/arm/at91_wd.h
    include/arch/arm/at91_wdt.h
    include/arch/arm/at91eb40a.h
    include/arch/arm/at91sam7x.h
    include/arch/arm/at91sam9260.h
    include/arch/arm/at91x40.h
    include/arch/arm/atom.h
    include/arch/arm/gba.h
    include/arch/arm/irqreg.h
    include/arch/arm/lpc2xxx.h
    include/arch/arm/timer.h
    include/arch/avr/atom.h
    include/arch/avr/gcc.h
    include/arch/avr/icc.h
    include/arch/avr/irqreg.h
    include/arch/avr/timer.h
    include/arch/h8300h/atom.h
    include/arch/h8300h/h83068f.h
    include/arch/h8300h/irqreg.h
    include/arch/m68k/atom.h
    include/arch/m68k/irqreg.h
    include/arch/unix/atom.h
    include/arch/unix/irqreg.h
    include/arch/unix/timer.h
    include/arch/arm.h
    include/arch/avr.h
    include/arch/h8.h
    include/arch/m68k.h
    include/arch/timer.h
    include/arch/unix.h
    include/arpa/inet.h
    include/cfg/arch/armpio.h
    include/cfg/arch/avr.h
    include/cfg/arch/avrpio.h
    include/cfg/arch/gpio.h
    include/cfg/ahdlc.h
    include/cfg/arch.h
    include/cfg/arp.h
    include/cfg/audio.h
    include/cfg/bankmem.h
    include/cfg/chat.h
    include/cfg/clock.h
    include/cfg/coconut.h
    include/cfg/crt.h
    include/cfg/dev.h
    include/cfg/dhcp.h
    include/cfg/eeprom.h
    include/cfg/ethernut.h
    include/cfg/fs.h
    include/cfg/ip.h
    include/cfg/lcd.h
    include/cfg/m-can.h
    include/cfg/medianut.h
    include/cfg/memory.h
    include/cfg/modem.h
    include/cfg/os.h
    include/cfg/ppp.h
    include/cfg/progif.h
    include/cfg/rport.h
    include/cfg/sntp.h
    include/cfg/syslog.h
    include/cfg/tcp.h
    include/cfg/twi.h
    include/cfg/xnut.h
    include/cpp/nutcpp.h
    include/dev/ace.h
    include/dev/adc.h
    include/dev/ahdlc.h
    include/dev/ahdlcavr.h
    include/dev/at45db.h
    include/dev/at49bv.h
    include/dev/at91_efc.h
    include/dev/at91_emac.h
    include/dev/at91_mci.h
    include/dev/at91_spi.h
    include/dev/at91sam7x_emac.h
    include/dev/at91sam7x_mac.h
    include/dev/atcan.h
    include/dev/avrtarget.h
    include/dev/ax88796.h
    include/dev/blockdev.h
    include/dev/board.h
    include/dev/can_dev.h
    include/dev/chat.h
    include/dev/cs8900a.h
    include/dev/cy2239x.h
    include/dev/debug.h
    include/dev/dm9000e.h
    include/dev/ds1307rtc.h
    include/dev/genchar.h
    include/dev/hd44780.h
    include/dev/hd44780_bus.h
    include/dev/ide.h
    include/dev/idep.h
    include/dev/ir.h
    include/dev/irqreg.h
    include/dev/irqreg_arm.h
    include/dev/irqreg_avr.h
    include/dev/irqreg_h8.h
    include/dev/irqreg_m68k.h
    include/dev/irqreg_unix.h
    include/dev/irqstack.h
    include/dev/irsony.h
    include/dev/lanc111.h
    include/dev/mmcard.h
    include/dev/mweeprom.h
    include/dev/netbuf.h
    include/dev/nicrtl.h
    include/dev/npl.h
    include/dev/nplmmc.h
    include/dev/npluled.h
    include/dev/null.h
    include/dev/nvmem.h
    include/dev/pcf8563.h
    include/dev/pcmcia.h
    include/dev/pnut.h
    include/dev/ppp.h
    include/dev/rtc.h
    include/dev/sbbif0.h
    include/dev/sbbif1.h
    include/dev/sbbif2.h
    include/dev/sbbif3.h
    include/dev/sbimmc.h
    include/dev/scih8.h
    include/dev/sja1000.h
    include/dev/spidigio.h
    include/dev/spiflash.h
    include/dev/spimmc_at91.h
    include/dev/sppif0.h
    include/dev/st7036.h
    include/dev/term.h
    include/dev/tlc16c550.h
    include/dev/twif.h
    include/dev/uart.h
    include/dev/uartavr.h
    include/dev/uartgba.h
    include/dev/uartspi.h
    include/dev/unix_devs.h
    include/dev/urom.h
    include/dev/usart.h
    include/dev/usartat91.h
    include/dev/usartavr.h
    include/dev/vs1001k.h
    include/dev/vs10xx.h
    include/dev/watchdog.h
    include/dev/wlan.h
    include/dev/wlancfg.h
    include/dev/wlandef.h
    include/dev/wlandrv.h
    include/dev/wlantypes.h
    include/dev/x12rtc.h
    include/fs/dospart.h
    include/fs/fat.h
    include/fs/fatfs.h
    include/fs/fs.h
    include/fs/phat12.h
    include/fs/phat16.h
    include/fs/phat32.h
    include/fs/phatdbg.h
    include/fs/phatdir.h
    include/fs/phatfs.h
    include/fs/phatio.h
    include/fs/phatutil.h
    include/fs/phatvol.h
    include/fs/typedefs.h
    include/fs/uromfs.h
    include/fs_org/dospart.h
    include/fs_org/fat.h
    include/fs_org/fatfs.h
    include/fs_org/fs.h
    include/fs_org/phat12.h
    include/fs_org/phat16.h
    include/fs_org/phat32.h
    include/fs_org/phatdbg.h
    include/fs_org/phatdir.h
    include/fs_org/phatfs.h
    include/fs_org/phatio.h
    include/fs_org/phatutil.h
    include/fs_org/phatvol.h
    include/fs_org/typedefs.h
    include/fs_org/uromfs.h
    include/net/errno.h
    include/net/ether.h
    include/net/if.h
    include/net/if_arp.h
    include/net/if_types.h
    include/net/if_var.h
    include/net/netdebug.h
    include/net/ppp.h
    include/net/route.h
    include/netinet/icmp.h
    include/netinet/if_ether.h
    include/netinet/if_ppp.h
    include/netinet/igmp.h
    include/netinet/in.h
    include/netinet/ip.h
    include/netinet/ip_icmp.h
    include/netinet/ipcsum.h
    include/netinet/ppp_fsm.h
    include/netinet/tcp.h
    include/netinet/tcp_fsm.h
    include/netinet/tcputil.h
    include/netinet/udp.h
    include/pro/asp.h
    include/pro/dhcp.h
    include/pro/discover.h
    include/pro/ftpd.h
    include/pro/httpd.h
    include/pro/sntp.h
    include/pro/ssi.h
    include/pro/wins.h
    include/sys/atom.h
    include/sys/bankmem.h
    include/sys/confnet.h
    include/sys/confos.h
    include/sys/device.h
    include/sys/event.h
    include/sys/file.h
    include/sys/heap.h
    include/sys/msg.h
    include/sys/mutex.h
    include/sys/nut_types.h
    include/sys/nutconfig.h
    include/sys/osdebug.h
    include/sys/semaphore.h
    include/sys/sock_var.h
    include/sys/socket.h
    include/sys/sockio.h
    include/sys/stat.h
    include/sys/syslog.h
    include/sys/thread.h
    include/sys/timer.h
    include/sys/tracer.h
    include/sys/types.h
    include/sys/version.h
    include/compiler.h
    include/cpu_load.h
    include/dirent.h
    include/display.h
    include/errno.h
    include/fat.h
    include/fatdrv.h
    include/fcntl.h
    include/flash.h
    include/io.h
    include/keyboard.h
    include/led.h
    include/libgen.h
    include/log.h
    include/mmc.h
    include/mmcdrv.h
    include/netdb.h
    include/platform.h
    include/portio.h
    include/remcon.h
    include/rtc.h
    include/spidrv.h
    include/stdio.h
    include/stdio_nut_wrapper.h
    include/strtok_r.h
    include/system.h
    include/time.h
    include/typedefs.h
    include/uart0driver.h
    include/unistd.h
    include/vs10xx.h
    include/watchdog.h
    net/arpcache.c
    net/arpin.c
    net/arpout.c
    net/confnet.c
    net/ether_addr.c
    net/ethin.c
    net/ethout.c
    net/icmpin.c
    net/icmpout.c
    net/ifconfig.c
    net/igmp.c
    net/igmpin.c
    net/igmpout.c
    net/inet.c
    net/ipcpin.c
    net/ipcpout.c
    net/ipcsum.c
    net/ipin.c
    net/ipout.c
    net/lcpin.c
    net/lcpout.c
    net/netdebug.c
    net/papin.c
    net/papout.c
    net/pppdebug.c
    net/pppin.c
    net/pppout.c
    net/pppsm.c
    net/route.c
    net/tcpin.c
    net/tcpout.c
    net/tcpsm.c
    net/tcpsock.c
    net/tcputil.c
    net/udpin.c
    net/udpout.c
    net/udpsock.c
    os/bankmem.c
    os/confos.c
    os/devreg.c
    os/event.c
    os/heap.c
    os/msg.c
    os/mutex.c
    os/nutinit.c
    os/osdebug.c
    os/semaphore.c
    os/thread.c
    os/timer.c
    os/tracer.c
    os/version.c
    pro/asp.c
    pro/auth.c
    pro/cgi.c
    pro/dencode.c
    pro/dencode.h
    pro/dhcpc.c
    pro/discover.c
    pro/ftpd.c
    pro/httpd.c
    pro/resolv.c
    pro/sntp.c
    pro/ssi.c
    pro/syslog.c
    pro/wins.c
    source/display.c
    source/fat.c
    source/flash.c
    source/http.c
    source/inet.c
    source/keyboard.c
    source/led.c
    source/log.c
    source/main.c
    source/mmc.c
    source/mmcdrv.c
    source/remcon.c
    source/rtc.c
    source/session.c
    source/spidrv.c
    source/uart0driver.c
    source/util.c
    source/vs10xx.c
    source/watchdog.c
    tools/crurom/crurom.c
    tools/crurom/dirent.c
    tools/crurom/getopt.c
    tools/include/win32/dirent.h
    tools/include/win32/getopt.h
    tools/nutconf/appoptdlg.cpp
    tools/nutconf/appoptdlg.h
    tools/nutconf/bldoptdlg.cpp
    tools/nutconf/bldoptdlg.h
    tools/nutconf/configitem.cpp
    tools/nutconf/configitem.h
    tools/nutconf/configtree.cpp
    tools/nutconf/configtree.h
    tools/nutconf/dirent.c
    tools/nutconf/enumeditctrl.cpp
    tools/nutconf/enumeditctrl.h
    tools/nutconf/finddlg.cpp
    tools/nutconf/finddlg.h
    tools/nutconf/getopt.c
    tools/nutconf/iconinfo.cpp
    tools/nutconf/iconinfo.h
    tools/nutconf/iconlist.cpp
    tools/nutconf/iconlist.h
    tools/nutconf/ids.h
    tools/nutconf/infowindow.cpp
    tools/nutconf/infowindow.h
    tools/nutconf/inteditctrl.cpp
    tools/nutconf/inteditctrl.h
    tools/nutconf/mainframe.cpp
    tools/nutconf/mainframe.h
    tools/nutconf/nutcomponent.c
    tools/nutconf/nutcomponent.h
    tools/nutconf/nutconf.cpp
    tools/nutconf/nutconf.h
    tools/nutconf/nutconfdoc.cpp
    tools/nutconf/nutconfdoc.h
    tools/nutconf/nutconfhint.cpp
    tools/nutconf/nutconfhint.h
    tools/nutconf/nutconfview.cpp
    tools/nutconf/nutconfview.h
    tools/nutconf/pathvalidator.cpp
    tools/nutconf/pathvalidator.h
    tools/nutconf/propertylist.cpp
    tools/nutconf/propertylist.h
    tools/nutconf/repoptdlg.cpp
    tools/nutconf/repoptdlg.h
    tools/nutconf/resource.h
    tools/nutconf/scrolledtree.cpp
    tools/nutconf/scrolledtree.h
    tools/nutconf/settings.cpp
    tools/nutconf/settings.h
    tools/nutconf/settingsdlg.cpp
    tools/nutconf/settingsdlg.h
    tools/nutconf/splitscroll.cpp
    tools/nutconf/splitscroll.h
    tools/nutconf/texteditctrl.cpp
    tools/nutconf/texteditctrl.h
    tools/nutconf/tooloptdlg.cpp
    tools/nutconf/tooloptdlg.h
    tools/nutconf/treecomp.cpp
    tools/nutconf/treecomp.h
    tools/nutconf/treeitemdata.cpp
    tools/nutconf/treeitemdata.h
    tools/nutconf/utils.cpp
    tools/nutconf/utils.h
    tools/nutconf/valuewindow.cpp
    tools/nutconf/valuewindow.h
    tools/nutdisc/discovery.h
    tools/nutdisc/mainframe.cpp
    tools/nutdisc/mainframe.h
    tools/nutdisc/nutdisc.cpp
    tools/nutdisc/nutdisc.h
    tools/nutdisc/propdialog.cpp
    tools/nutdisc/propdialog.h
    tools/nutdisc/resource.h
    tools/nutdisc/setup.cpp
    tools/nutdisc/setup.h
    tools/nutdisc/udpthread.cpp
    tools/nutdisc/udpthread.h
    tools/nutdisc/version.h)

add_executable(nut ${SOURCE_FILES})